config-root/namespaces/jx/jxboot-helmfile-resources/700-hook-ing.yaml
# Source: jxboot-helmfile-resources/templates/700-hook-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hook
  annotations:
    kubernetes.io/ingress.class: nginx
  namespace: jx
  labels:
    gitops.jenkins-x.io/pipeline: 'environment'
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: hook
          servicePort: 80
    host: hook-jx.b0c548429dc0.ngrok.io
